# DongneBascketball

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  coverage.xml  pyproject.toml  pytest.ini  zappa_settings.json
.github/workflows/: django.yml
area/: apps.py
core/: models.py  schemas.py  settings.py  urls.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  sample-data.ts  shared.module.ts
frontend/src/app/domain/: common.ts  freeboard.ts  guest.ts  question-answer.ts  user.ts
frontend/src/app/freeboard/: freeboard-resolve.service.ts  freeboard.component.html  freeboard.component.scss  freeboard.component.ts
frontend/src/app/guest-announcement/: guest-announcement-resolve.service.ts  guest-announcement.component.html  guest-announcement.component.scss  guest-announcement.component.ts
frontend/src/app/home/: home.component.html  home.component.scss  home.component.ts
frontend/src/app/question-answer/: question-answer-resolve.service.ts  question-answer.component.html  question-answer.component.scss  (+1 more)
frontend/src/environments/: environment.ts
junit/: test-results.xml
post/: models.py  schemas.py  views.py
post/migrations/: 0001_initial.py
user/: admin.py  factories.py  models.py  schemas.py  tests.py  views.py
user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_user_is_delete_alter_user_username.py
(+36 files in other folders)
